urcu/tests/ui/list/iter-forward-fail-0.stderr
error[E0505]: cannot move out of `list` because it is borrowed
  --> tests/ui/list/iter-forward-fail-0.rs:9:10
   |
6  |     let list = RcuList::<u32>::new();
   |         ---- binding `list` declared here
7  |     let guard = context.rcu_read_lock();
8  |     let mut iter = list.iter_forward(&guard);
   |                    ---- borrow of `list` occurs here
9  |     drop(list);
   |          ^^^^ move out of `list` occurs here
10 |     log::info!("{:?}", iter.next());
   |                        ---- borrow later used here
